# Thesis-Implementation

./: .dockerignore  .gitignore  Dockerfile  RASPBERRY_PI_SETUP.md  README.md  USER_GUIDE.md  agent_execution_plan.md  data_collection_training_plan.md  docker-compose.yml  implementation_plan.md  poc_synthetic_data_attachment.yaml  proof_of_concept_plan.md  pyproject.toml
configs/: baseline_sdae.yaml  baseline_sdae_public_cwru.yaml  baseline_sdae_public_femto.yaml  baseline_sdae_public_ims.yaml  baseline_sdae_public_paderborn.yaml  baseline_sdae_smoke.yaml  dataset_poc_synthetic.yaml  dataset_poc_synthetic_smoke.yaml  dataset_poc_synthetic_training_smoke.yaml  dataset_public_cwru.yaml  dataset_public_femto.yaml  dataset_public_hust.yaml  dataset_public_ims.yaml  dataset_public_paderborn.yaml  hdbscan.yaml  hdbscan_public_cwru.yaml  hdbscan_public_femto.yaml  hdbscan_public_hust.yaml  hdbscan_public_ims.yaml  hdbscan_public_paderborn.yaml  poc_synthetic.yaml  poc_synthetic_smoke.yaml  poc_synthetic_training_smoke.yaml  public_cwru.yaml  public_femto.yaml  public_hust.yaml  public_ims.yaml  public_paderborn.yaml
scripts/: _linux_common.sh  analyze_femto_degradation_onset.py  docker_build.ps1  docker_build.sh  docker_shell.ps1  docker_shell.sh  docker_test.ps1  docker_test.sh  run_container_checks.sh  run_mahalanobis_confidence_sweep.ps1  run_objective_1_checks.ps1  run_objective_1_checks.sh  run_objective_2_checks.ps1  run_objective_2_checks.sh  run_objective_3_checks.ps1  run_objective_3_checks.sh  run_objective_4_checks.ps1  run_objective_4_checks.sh  setup_env.ps1  (+8 more)
(+35 files in other folders)
